--- a/smartcontracts/package.json
+++ b/smartcontracts/package.json
@@ -12,6 +12,8 @@
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.2.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@types/mocha": "^10.0.4",
     "chai": "^4.2.0",
     "ethers": "^6.4.0",
@@ -25,8 +27,9 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
-    "@openzeppelin/contracts": "^5.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "solc": "^0.8.7"
+    
   }
 }
